crates/codegen/language/tests/src/fail/references/invalid_filter/test.stderr
error: Reference 'Baz' of kind 'Fragment' is not valid. Expected: [Struct, Enum, Repeated, Separated, Precedence, Keyword, Token]
  --> src/fail/references/invalid_filter/test.rs:14:63
   |
14 |                 Struct(name = Bar, fields = (field = Required(Baz))),
   |                                                               ^^^
